--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ img {
 header {
 
   width:100%;
-  height: 400px;
+  height: 250px;
   margin: 0;
 }
 }
@@ -94,11 +94,14 @@ fieldset {
   padding-top: 30px;
   text-align: center;
 }
-.show-result{
-  float: left;
-  background-color: black;
-  width: 50%;
+#show-result{
   display: none;
+  padding-top: 15px;
+  margin: auto;
+  width: 100%;
+}
+#show-result h2 {
+  text-align: center;
 }
 .form-control {
   margin: auto;
